hphp/test/vm/zend_closure_020.php.expectf
object(foo)#1 (2) {
  ["test":"foo":private]=>
  int(3)
  ["a"]=>
  object(Closure$foo$x$3f94cf6423ec56252c9aba668f708bce$0)#2 (1) {
    ["a":"Closure$foo$x$3f94cf6423ec56252c9aba668f708bce$0":private]=>
    *RECURSION*
  }
}
bool(true)
bool(true)
HipHop Fatal error: Cannot access private property foo::$test in %s on line 19
